--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ Jinja2==2.9.4
 
 pep8==1.7.0
 python-dateutil==2.6.0
-
+setuptools==0.7.3
 redis==2.10.5
 requests==2.12.4
 requests-oauthlib==0.8.0
